@@ -109,6 +109,7 @@
             "Dist::Zilla::Plugin::RemovePrereqs::Provided" : "0",
             "Dist::Zilla::Plugin::ReversionOnRelease" : "0",
             "Dist::Zilla::Plugin::RunExtraTests" : "0",
+            "Dist::Zilla::Plugin::SetScriptShebang" : "0",
             "Dist::Zilla::Plugin::ShareDir" : "0",
             "Dist::Zilla::Plugin::TestRelease" : "0",
             "Dist::Zilla::Plugin::UploadToCPAN" : "0",
@@ -349,6 +350,11 @@
             "class" : "Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic",
             "name" : "@Author::SKIRMESS/AutoPrereqs::Perl::Critic",
             "version" : "0.002"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::SetScriptShebang",
+            "name" : "@Author::SKIRMESS/SetScriptShebang",
+            "version" : "0.01"
          },
          {
             "class" : "Dist::Zilla::Plugin::Authority",
