@@ -65,6 +65,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::RemovePrereqs::Provided" => 0,
     "Dist::Zilla::Plugin::ReversionOnRelease" => 0,
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
+    "Dist::Zilla::Plugin::SetScriptShebang" => 0,
     "Dist::Zilla::Plugin::ShareDir" => 0,
     "Dist::Zilla::Plugin::TestRelease" => 0,
     "Dist::Zilla::Plugin::UploadToCPAN" => 0,
@@ -140,6 +141,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::RemovePrereqs::Provided" => 0,
   "Dist::Zilla::Plugin::ReversionOnRelease" => 0,
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
+  "Dist::Zilla::Plugin::SetScriptShebang" => 0,
   "Dist::Zilla::Plugin::ShareDir" => 0,
   "Dist::Zilla::Plugin::TestRelease" => 0,
   "Dist::Zilla::Plugin::UploadToCPAN" => 0,
